# FOMOSv3-Blue

./: .gitignore  Cargo.toml  Makefile  README.md  aarch64-FOMOS.json
Documentaion/: devices.md
devices/: reg_rpi.rs  stdpc.rs
libfk/libfktask/: Cargo.toml
libfk/libfktask/src/: lib.rs  task.rs  task_manager.rs
src/: aarch64.rs  desktop.rs  fk.rs  fmain.rs  input.rs  kernel.rs  main.rs  x86_64.rs
src/arch/: mod.rs
src/arch/a64/: mod.rs
src/arch/x64/: mod.rs  tasks.rs
src/arch/x64/input/: kbmouse.rs  mod.rs
src/builtins/: mod.rs
src/builtins/hello_world/: hello.c  mod.rs
src/builtins/terminal/: mod.rs
src/fomos/: main.rs  mod.rs  tasks.rs
src/graphics/: drawer.rs  mod.rs
src/setup/: device.rs  mod.rs
src/setup/device/: mod.rs
