[package]
name = "FOMOSv3-Blue"
version = "3.0.0"
authors = ["NathanMcMillan <nathanmcmillan54@gmail.com>"]
edition = "2018"

[target.'cfg(target_arch = "x86_64")'.dependencies]
bootloader = "0.9.18"

[dependencies]
lazy_static = "1.4.0"
spin = "0.9.2"

[dependencies.novusk]
git = "https://github.com/NathanMcMillan54/novusk"
tag = "v3-beta-k3.1"
features = ["custom_config", "bios_boot", "rpi3"]
